--- a/index.html
+++ b/index.html
@@ -5,23 +5,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Environmental Science Club</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
+<!-- Floating leaves -->
+<div class="leaf" style="left: 10%; animation-duration: 12s;"></div>
+<div class="leaf" style="left: 30%; animation-duration: 15s;"></div>
+<div class="leaf" style="left: 70%; animation-duration: 18s;"></div>
+
 <header>
-  <h1>Environmental Science Club</h1>
+  <h1><i class="fas fa-leaf icon"></i>Environmental Science Club</h1>
   <p>Students working together to build a greener future</p>
 </header>
+
 <nav>
   <a href="index.html">Home</a>
   <a href="activities.html">Activities</a>
   <a href="competitions.html">Competitions</a>
   <a href="about.html">About Us</a>
 </nav>
+
 <div class="section">
-  <h2>Welcome</h2>
+  <h2><i class="fas fa-seedling icon"></i>Welcome</h2>
   <p>Our club promotes environmental awareness, sustainable projects, and coding hackathons focused on solving real-world problems.</p>
-  <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?auto=format&fit=crop&w=1200&q=80" alt="Nature">
+  <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?auto=format&fit=crop&w=800&q=80" alt="Nature Landscape">
 </div>
+
 <footer>© 2025 Environmental Science Club – All Rights Reserved</footer>
 </body>
 </html>
