--- a/competitions.html
+++ b/competitions.html
@@ -5,23 +5,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Competitions - Environmental Science Club</title>
 <link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
 <header>
-  <h1>Environmental Science Club</h1>
+  <h1><i class="fas fa-leaf icon"></i>Environmental Science Club</h1>
   <p>Students working together to build a greener future</p>
 </header>
+
 <nav>
   <a href="index.html">Home</a>
   <a href="activities.html">Activities</a>
   <a href="competitions.html">Competitions</a>
   <a href="about.html">About Us</a>
 </nav>
+
 <div class="section">
-  <h2>Competitions</h2>
+  <h2><i class="fas fa-trophy icon"></i>Competitions</h2>
   <p><!-- Add competitions info here --></p>
-  <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=1200&q=80" alt="Competitions">
+  <img src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?auto=format&fit=crop&w=800&q=80" alt="Competitions">
 </div>
+
 <footer>© 2025 Environmental Science Club – All Rights Reserved</footer>
 </body>
 </html>
