--- a/index.html
+++ b/index.html
@@ -27,8 +27,26 @@
 </nav>
 
 <div class="section">
-  <h2><i class="fas fa-seedling icon"></i>Welcome</h2>
-  <p>Our club promotes environmental awareness, sustainable projects, and coding hackathons focused on solving real-world problems.</p>
+  <h2><i class="fas fa-seedling icon"></i>Overview</h2>
+
+  <p>The primary goal of the Environmental Science Club is to encourage students who are passionate about using science and technology to create a more sustainable future. The club will focus on understanding environmental issues like climate change, energy use, and resource management through means of research and creative problem-solving. Members can take part in projects and hackathons as part of the club.</p>
+
+  <p>The club will also host coding hackathons related to environmental science and sustainability, which will give students the chance to make apps and tools that will address environmental issues. Joining the Environmental Science Club creates a positive impact in the community and it's also beneficial as you can win hackathons.</p>
+
+  <p>Overall, environmental science is relevant regardless of your major.</p>
+
+  <h2><i class="fas fa-calendar-alt icon"></i>Club Activities and Timeline</h2>
+  <p>November: Club recruitment ongoing until November 19.<br>
+  November 19–30: Begin hackathon preparation, including idea brainstorming, team formation, and skill-building sessions on relevant coding tools and environmental data. Continue recruitment of new members as necessary.<br>
+  December onward: Participate in external hackathons as groups; develop member-led projects; host hackathons (dates TBD).</p>
+
+  <h2><i class="fas fa-tools icon"></i>What the Club Provides</h2>
+  <p>Tools and resources for research, coding, and app development. Opportunities to work with like-minded peers on sustainability projects. Guidance for hackathon participation and project execution.</p>
+
+  <h2><i class="fas fa-bullseye icon"></i>Long-Term Goals and Expectations</h2>
+  <p><strong>Long-term goals:</strong> Develop practical apps/tools for environmental solutions. Compete and win in regional/national sustainability hackathons. Build a portfolio of student-led environmental projects.</p>
+  <p><strong>What we expect of members:</strong> Attend meetings regularly and contribute to projects/hackathons. Collaborate on research, coding, and problem-solving. Meet project deadlines and maintain originality.</p>
+
   <img src="https://images.unsplash.com/photo-1473448912268-2022ce9509d8?auto=format&fit=crop&w=800&q=80" alt="Nature Landscape">
 </div>
 
